add AbstractController to mutualize 404 response add SurveyNormalizer update swagger json
